# qt-cmake-template

./: CMakeLists.txt  HelloModel.qml  main.qml  mainc.c  maincxx.cpp  runit.sh
